@@ -264,6 +264,8 @@ package DXM;
 				talknh => 'Sorry $_[0] is not online at the moment',
 				talkprompt => 'Talk ($_[0])>',
 				talkstart => 'Starting talking to you',
+				unsethop1 => 'usage: unset/hops <call> ann|spots|wwv|wcy',
+				unsethop2 => 'hops unset on $_[1] for $_[0]', 
 				usernf => '*** User record for $_[0] not found ***',
 				wwvs => 'WWV flag set on $_[0]',
 				wwvu => 'WWV flag unset on $_[0]',
