@@ -1,3 +1,5 @@
+08Dec01=======================================================================
+1. added unset/hops command
 02Dec01=======================================================================
 1. Fix spurious 'new message for you' messages if things are deleted but 
 unread.
